--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 h2{
@@ -16,8 +17,65 @@ html, body{
 
 body{
     background-color: skyblue;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 ul{
-    list-style-type: square;
+    list-style-type: none;
+    font-size: 16px;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.container div{
+    padding: 15px;
+    font-size: 16px;
+}
+
+.header{
+    grid-column: 2 / 3;
+    grid-row: 1/2;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.side{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+
+    display: grid;
+    grid-template-rows: auto;
+    gap: 10px;
+}
+
+.side ul{
+    display: grid;
+}
+
+.main-content{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.project-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+}
+
+.project-container h3{
+    grid-column: 1 / 3;
+    grid-row: 1 / -1;
+}
+
+.project-container .project{
+    height: 200px;
 }
