--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 h2{
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
@@ -28,20 +28,30 @@ ul{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 4fr;
+    
+
+    height: 100%;
+    padding: 16px;
+    box-sizing: border-box;
 }
 
 .container div{
-    padding: 15px;
+    padding: 5px;
     font-size: 16px;
+    border-radius: 15px;
 }
 
 .header{
     grid-column: 2 / 3;
-    grid-row: 1/2;
+    grid-row: 1 / 2;
 
     display: grid;
     grid-template-columns: 2fr 1fr;
+}
+
+.header .left-side{
+    display: grid;
 }
 
 .side{
@@ -49,12 +59,31 @@ ul{
     grid-row: 1 / 3;
 
     display: grid;
-    grid-template-rows: auto;
-    gap: 10px;
+    grid-template-rows: auto auto 1fr;
+    gap: 40px;
+}
+
+.logo{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
 }
 
 .side ul{
     display: grid;
+    gap: 20px;
+}
+
+.side .main-links ul li{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 5px;
+}
+
+.side .secondary-links ul li{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 5px;
 }
 
 .main-content{
@@ -68,11 +97,12 @@ ul{
 .project-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: min-content;
     gap: 15px;
 }
 
 .project-container h3{
-    grid-column: 1 / 3;
+    grid-column: 1 / -1;
     grid-row: 1 / -1;
 }
 
