--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@ body{
     background-color: skyblue;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.3;
 }
 
 ul{
     list-style-type: none;
     font-size: 16px;
+}
+
+button{
+    cursor: pointer;
 }
 
 .container{
@@ -110,6 +115,11 @@ ul{
     justify-content: center;
 }
 
+.right-side ul li{
+    align-items: center;
+    justify-items: center;
+}
+
 
 .right-side-top{
     display: grid;
@@ -183,8 +193,8 @@ ul{
 
 .project-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: min-content;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
 }
 
@@ -193,10 +203,24 @@ ul{
     grid-row: 1 / -1;
 }
 
+.project-container .title{
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
 .project-container .project{
-    height: 200px;
+    /* height: 200px; */
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    padding: 20px;
     background-color: white;
     border-left: 6px solid rgb(255, 188, 100);
+}
+
+.project .special-icons{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-self: end;
 }
 
 .announcement-trending-container{
@@ -206,9 +230,55 @@ ul{
 }
 
 .announcements{
-    background-color: white;
+    display: grid;
+    grid-template-rows: min-content;
+    gap: 15px
 }
 
-.trending{
+.announcements ul{
+    display: grid;
     background-color: white;
+    padding: 20px;
+    gap: 20px;
+    border-radius: 20px;
 }
+
+.announcements ul li{
+    padding-top: 20px;
+}
+
+.announcements ul li:nth-child(-n+2) p{
+    padding-bottom: 20px;
+    border-bottom: 1px solid gray;
+}
+
+.trending {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 15px;
+}
+.trending ul{
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 20px;
+    grid-template-rows: repeat(4, 1fr);
+    align-self: center;
+}
+
+.trending ul li{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.trending ul li img{
+    grid-row: 1 / 3;
+    align-self: center;
+}
+
+.trending ul, .announcements ul, .header, .project{
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
